# afri-dollar

./: .eslintrc.js  README.md  package-lock.json  package.json
.github/coderabbit/: repository_instructions.md
.husky/: pre-commit  pre-commit-branch  pre-push
apps/backend/: .env.example  README.md  jest.config.js  package.json
apps/backend/src/: index.ts
apps/backend/src/controllers/: auth.controller.ts  fx.controller.ts  report.controller.ts  security.controller.ts
apps/backend/src/middleware/: auth.middleware.ts  error.middleware.ts  security.middleware.ts
apps/backend/src/routes/: auth.routes.ts  fx.routes.ts  report.routes.ts  security.routes.ts
apps/backend/src/services/: auth.service.ts  fx.service.ts  payment.service.ts  payroll.service.ts  report-worker.service.ts  report.helpers.ts  report.service.ts  security.service.ts  stellar.service.ts
apps/backend/src/tests/unit/: auth.test.ts  error.middleware.test.ts  fx.test.ts  payment.test.ts  payroll.test.ts  security.service.test.ts
apps/backend/src/types/: index.ts  report.type.ts  security.types.ts
apps/backend/src/utils/: crypto.ts  index.ts  validation.ts
apps/contracts/contracts/payroll/: Cargo.toml
apps/contracts/contracts/payroll/src/: lib.rs
apps/contracts/contracts/staking/: Cargo.toml
apps/contracts/contracts/vesting/: Cargo.toml
apps/contracts/contracts/vesting/src/: lib.rs  test.rs
apps/frontend/: next.config.js  package.json
apps/frontend/src/app/: page.tsx
apps/frontend/src/types/: index.ts  security.ts
apps/frontend/tests/: components.test.tsx
(+4 files in other folders)
